fix corrupt file structure re-upload

--- a/content - elements.html
+++ b/content - elements.html
@@ -10,12 +10,9 @@
     <!-- ZKIN UI KIT CSS -->
     <link rel="stylesheet" href="assets/css/zkin-ui-kit.css">
     <!-- Temp CSS -->
-    <link rel="stylesheet" href="assets/css/lester-titles.css">
     <link rel="stylesheet" href="assets/css/flip.css">
     <link rel="stylesheet" href="assets/css/bubblequote.css">
     <link rel="stylesheet" href="assets/css/lists.css">
-    <!-- Demo Content CSS -->
-    <link rel="stylesheet" href="assets/css/demo.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Page effects CSS -->
@@ -23,8 +20,7 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
     <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700|Montserrat:400,500,600,700,800|Noto+Serif+SC:400" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700|Montserrat:400,500,600,700,800|Noto+Serif+TC:400,600" rel="stylesheet">
 </head>
 
 <body>
@@ -475,7 +471,7 @@
             </div>
         </header>
         <!-- Content -->
-        <section class="element-section gray-section">
+        <section class="content-section gray-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 order-lg-2 pl-lg-2 collapse dont-collapse-sm" id="content-nav">
