--- a/content-elements.html
+++ b/content-elements.html
@@ -9,10 +9,7 @@
     <title>ZKIN - Bootstrap 4 Skin & UI Kit</title>
     <!-- ZKIN UI KIT CSS -->
     <link rel="stylesheet" href="assets/css/zkin-ui-kit.css">
-    <!-- Temp CSS -->
-    <link rel="stylesheet" href="assets/css/flip.css">
-    <link rel="stylesheet" href="assets/css/bubblequote.css">
-    <link rel="stylesheet" href="assets/css/lists.css">
+
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Page effects CSS -->
@@ -577,9 +574,9 @@
 
 <div class="d-flex">
                             <ul class="list list-type-1">
-                    <li><p>Nunc feugiat mi a tellus consequat imperdiet</p></li>
-                    <li><p>Vestibulum ante ipsum primis in faucibus</p></li>
-                    <li><p>Donec lacus nunc, viverra nec, blandit vel</p></li>
+                    <li><span>Nunc feugiat mi a tellus consequat imperdiet</span></li>
+                    <li><span>Vestibulum ante ipsum primis in faucibus</span></li>
+                    <li><span>Donec lacus nunc, viverra nec, blandit vel</span></li>
 
                 </ul>
 </div>
