--- a/content.html
+++ b/content.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="assets/css/zkin-ui-kit.css">
     <!-- Temp CSS -->
     <link rel="stylesheet" href="assets/css/lester-titles.css">
-    <link rel="stylesheet" href="assets/css/flip.css">
     <!-- Demo Content CSS -->
     <link rel="stylesheet" href="assets/css/demo.css">
     <!-- Font Awesome CSS -->
@@ -473,7 +472,7 @@
             </div>
         </header>
         <!-- Content -->
-        <section class="element-section gray-section">
+        <section class="content-section gray-section">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 order-lg-2 pl-lg-2 collapse dont-collapse-sm" id="content-nav">
