--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Page effects CSS -->
     <link rel="stylesheet" href="assets/css/aos.css">
-    <!-- Agent pop effects CSS -->
-    <link rel="stylesheet" href="assets/css/agent-pop.css">
 
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
@@ -1920,17 +1918,17 @@
                 <div class="image-column col-6">
                     <div class="inner-column">
                         <div id="particles-js"></div>
-                        <div class="author-one"><img src="assets/images/agent/author-8.jpg" alt="" /></div>
-                        <div class="author-two"><img src="assets/images/agent/author-9.jpg" alt="" /></div>
-                        <div class="author-three"><img src="assets/images/agent/author-10.jpg" alt="" /></div>
-                        <div class="author-four"><img src="assets/images/agent/author-11.jpg" alt="" /></div>
-                        <div class="author-five"><img src="assets/images/agent/author-12.jpg" alt="" /></div>
-                        <div class="author-six"><img src="assets/images/agent/author-13.jpg" alt="" /></div>
-                        <div class="author-seven"><img src="assets/images/agent/author-14.jpg" alt="" /></div>
-                        <div class="author-eight"><img src="assets/images/agent/author-15.jpg" alt="" /></div>
-                        <div class="author-nine"><img src="assets/images/agent/author-16.jpg" alt="" /></div>
-                        <div class="author-ten"><img src="assets/images/agent/author-17.jpg" alt="" /></div>
-                        <div class="author-eleven"><img src="assets/images/agent/author-18.jpg" alt="" /></div>
+                        <div class="author-one author-img"><img src="assets/images/agent/author-8.jpg" alt="" /></div>
+                        <div class="author-two author-img"><img src="assets/images/agent/author-9.jpg" alt="" /></div>
+                        <div class="author-three author-img"><img src="assets/images/agent/author-10.jpg" alt="" /></div>
+                        <div class="author-four author-img"><img src="assets/images/agent/author-11.jpg" alt="" /></div>
+                        <div class="author-five author-img"><img src="assets/images/agent/author-12.jpg" alt="" /></div>
+                        <div class="author-six author-img"><img src="assets/images/agent/author-13.jpg" alt="" /></div>
+                        <div class="author-seven author-img"><img src="assets/images/agent/author-14.jpg" alt="" /></div>
+                        <div class="author-eight author-img"><img src="assets/images/agent/author-15.jpg" alt="" /></div>
+                        <div class="author-nine author-img"><img src="assets/images/agent/author-16.jpg" alt="" /></div>
+                        <div class="author-ten author-img"><img src="assets/images/agent/author-17.jpg" alt="" /></div>
+                        <div class="author-eleven author-img"><img src="assets/images/agent/author-18.jpg" alt="" /></div>
                     </div>
                 </div>
                 
@@ -1951,11 +1949,11 @@
                         <div class="circle-one"></div>
                         <div class="circle-two"></div>
                     </div>
-                        <div class="author-one"><img src="assets/images/agent/author-19.jpg" alt="" /></div>
-                        <div class="author-two"><img src="assets/images/agent/author-20.jpg" alt="" /></div>
-                        <div class="author-three"><img src="assets/images/agent/author-21.jpg" alt="" /></div>
-                        <div class="author-four"><img src="assets/images/agent/author-22.jpg" alt="" /></div>
-                        <div class="author-five"><img src="assets/images/agent/author-23.jpg" alt="" /></div>
+                        <div class="author-one author-img"><img src="assets/images/agent/author-19.jpg" alt="" /></div>
+                        <div class="author-two author-img"><img src="assets/images/agent/author-20.jpg" alt="" /></div>
+                        <div class="author-three author-img"><img src="assets/images/agent/author-21.jpg" alt="" /></div>
+                        <div class="author-four author-img"><img src="assets/images/agent/author-22.jpg" alt="" /></div>
+                        <div class="author-five author-img"><img src="assets/images/agent/author-23.jpg" alt="" /></div>
                         <div class="icon"><span class=" fa fa-heart"></span></div>
                     </div>
                 </div>
