--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,6 @@
 
     <!-- ZKIN UI KIT CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
-    <!-- Demo Content CSS -->
-    <link rel="stylesheet" href="assets/css/demo.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Page effects CSS -->
@@ -540,7 +538,9 @@
             </div>
         </div>
     </section>
-    <!-- [6] Map Section -->
+
+    <!-- MAP SECTION - WILL ADD LATER
+
     <section class="map-section">
         <div class="toggle-map d-flex justify-content-center align-items-center border-top-simple border-bottom-simple">
             <div class="show active flex-column align-items-center">
@@ -554,6 +554,8 @@
         </div>
         <div id="map"></div>
     </section>
+  -->
+
     <!-- [7] Follow Us Section -->
     <section class="follow-us-section large-section gray-section">
         <div class="container">
