--- a/ui-elements.html
+++ b/ui-elements.html
@@ -3245,9 +3245,9 @@
                                 <a class="dropdown-item taro" href="javascript:void(0);">Taro</a>
                                 <a class="dropdown-item strawberry" href="javascript:void(0);">Strawberry</a>
                                 <a class="dropdown-item pandan" href="javascript:void(0);">Pandan</a>
-                                <a class="dropdown-item blueberry" href="javascript:void(0);">Blueberry</a>
+                                <a class="dropdown-item grape" href="javascript:void(0);">Grape</a>
                                 <a class="dropdown-item custard" href="javascript:void(0);">Custard</a>
-                                <a class="dropdown-item blackcurrent" href="javascript:void(0);">Black Current</a>
+                                <a class="dropdown-item blueberry" href="javascript:void(0);">Blueberry</a>
                                 <a class="dropdown-item sweetpotato" href="javascript:void(0);">Sweet Potato</a>
                                 <a class="dropdown-item chocolate" href="javascript:void(0);">Chocolate</a>
                                 <a class="dropdown-item greentea" href="javascript:void(0);">Green Tea</a>
