--- a/ui-elements.html
+++ b/ui-elements.html
@@ -9,6 +9,8 @@
     <title>ZKIN - Bootstrap 4 Skin & UI Kit</title>
     <!-- ZKIN UI KIT CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
+    <!-- ZKIN UI KIT CSS -->
+    <link rel="stylesheet" href="assets/css/design.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Google Font -->
@@ -16,7 +18,7 @@
     
 </head>
 
-<body>
+<body class="zh">
     <!-- Header -->
     <div class="homenet-header header-shadow header-dark homenet-mega-menu no-sticky">
         <div class="sticky-bar-bg">
@@ -1215,7 +1217,7 @@
                         <a href="#" class="button-default-white-3 mx-1">Button white type 3</a>
                     </div>
                     <div class="mb-5 flex-wrap d-flex">
-                        <a href="#" class="button-submit mx-1">Button submit</a>
+                        <a href="javascript:void(0);" class="button-submit mx-1">Button submit</a>
                     </div>
                     <h3 class="font-weight-400 mb-4">Types</h3>
                     <!-- Types -->
