--- a/homenet-design-styles.html
+++ b/homenet-design-styles.html
@@ -674,20 +674,28 @@
                         <button class="button-search">Search</button>
                     </div>
 <div class="mb-5 flex-wrap d-flex">
+                        <button class="button-dash">Start Now</button>
+                    </div>
+<div class="mb-5 flex-wrap d-flex">
+                        <button class="button-msg-send">Send Message</button>
+                    </div> 
+<div class="mb-5 flex-wrap d-flex">
+                        <button class="button-verify">Verify Via SMS</button>
+                    </div>
+<div class="mb-5 flex-wrap d-flex">
+                        <button class="button-popup confirm">Confirm</button>
+                    </div>
+<div class="mb-5 flex-wrap d-flex">
+                        <button class="button-popup cancel">Cancel</button>
+                    </div>
+
+
+<div class="mb-5 flex-wrap d-flex">
                         <button class="button-action listing-enquiry">Send Enquiry</button>
                     </div>
 <div class="mb-5 flex-wrap d-flex">
                         <button class="button-action save">Save</button>
                     </div>
-
-                        <div class="enquiry_button">
-                            Send Enquiry
-                        </div>
-                                        <div class="button_sq" id="save">
-                                            <div class="text">
-                                                Save
-                                            </div>
-                                        </div>
 
 
                 </div>
