--- a/content-flip-cards.html
+++ b/content-flip-cards.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/favicon.ico">
-    <title>ZKIN - Bootstrap 4 Skin & UI Kit</title>
-    <!-- ZKIN UI KIT CSS -->
+    <title>Homenet Info Page Flip Cards</title>
+    <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -15,9 +15,10 @@
     <link rel="stylesheet" href="assets/css/aos.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700|Montserrat:400,500,600,700,800|Noto+Serif+SC:400" rel="stylesheet">
-    
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
+    <!-- Chinese Google Font load for zh only -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
 </head>
 
 <body>
