--- a/homenet-design-styles-all.html
+++ b/homenet-design-styles-all.html
@@ -7,12 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Design Styles</title>
-    <!-- Homenet Bootstrap Styles -->
+    <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
-    <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700|Montserrat:400,500,600,700,800|Noto+Serif+SC:400" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
+    <!-- Chinese Google Font load for zh only -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
 </head>
 
 <body class="en">
@@ -450,9 +450,9 @@
                         <div class="search_engine">
                             Neighbourhood<br>
                             Building Name or Address<br>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-search">Search</button>
-                    </div>
+                            <div class="mb-5 flex-wrap d-flex">
+                                <button class="homenet-btn button-search">Search</button>
+                            </div>
                             <div class="bar">
                                 <div class="rent">
                                     RENT
@@ -505,7 +505,6 @@
                     <div class="sole_agent">
                         SOLE AGENT
                     </div>
-
                     <div class="price-container">
                         <h2 class="type">FOR SALE | FOR RENT</h2>
                         <div class="sale">
@@ -553,9 +552,9 @@
                         <span class="verification">Mobile Verified</span><br>
                         <span class="verification">Commission Free</span><br>
                         <span class="call">Call Owner Now</span><br>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-action listing-enquiry">Send Enquiry</button>
-                    </div>
+                        <div class="mb-5 flex-wrap d-flex">
+                            <button class="homenet-btn button-action listing-enquiry">Send Enquiry</button>
+                        </div>
                         <span class="ref">Ref 235671 . Updated 19 Jan 2019 . Report</span>
                     </div>
                 </div>
@@ -659,38 +658,15 @@
                             Listed for 1 day
                         </div>
                     </div>
-                     <div class="mb-5 flex-wrap d-flex">
+                    <div class="mb-5 flex-wrap d-flex">
                         <button class="homenet-btn search-btn more-filters">More Filters</button>
                     </div>
                     <div class="mb-5 flex-wrap d-flex">
                         <button class="homenet-btn search-btn close-filters">Close</button>
-                    </div> 
-
-
-
-<div class="mb-5 flex-wrap d-flex">
+                    </div>
+                    <div class="mb-5 flex-wrap d-flex">
                         <button class="homenet-btn button-contact">Contact</button>
                     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                 </div>
             </div>
         </div>
@@ -970,15 +946,12 @@
                                         <div class="avatar">
                                             My Avatar
                                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-bordered-rnd change-pic">Change UserPic</button>
-                    </div>
-
-      <div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-bordered-rnd delete-pic">Delete UserPic</button>
-                    </div>
-
-
+                                        <div class="mb-5 flex-wrap d-flex">
+                                            <button class="homenet-btn button-bordered-rnd change-pic">Change UserPic</button>
+                                        </div>
+                                        <div class="mb-5 flex-wrap d-flex">
+                                            <button class="homenet-btn button-bordered-rnd delete-pic">Delete UserPic</button>
+                                        </div>
                                         <span class="fields">Name</span> <span class="fields">Email</span> <span class="fields">Mobile</span><br>
                                         <div class="input">
                                             <div class="textarea">
@@ -1007,26 +980,25 @@
                                         <div class="selector mobile">
                                             Mobile Public
                                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-verify">Verify Via SMS</button>
-                    </div>
-
+                                        <div class="mb-5 flex-wrap d-flex">
+                                            <button class="homenet-btn button-verify">Verify Via SMS</button>
+                                        </div>
                                         <span class="cancel">Cancel</span>
                                         <div class="description textarea">
                                             Rose Tico and her older sister Paige grew up Hays Minor, a impoverished mining colony in the Otomok system. The First Order forced her people to mine their planet's resources to feed their war machine, then shelled them to test the results. Having lost everything they had to the First Order, Rose and her sister joined the Resistance to avenge their homeworld.
                                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-action save">Save</button>
-                    </div>
+                                        <div class="mb-5 flex-wrap d-flex">
+                                            <button class="homenet-btn button-action save">Save</button>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="side_menu">
                                     <div class="container">
                                         <div class="content">
                                             <span>Edit Profile</span> <span>Change User Pic</span> <span>Account Password</span> <span>My Agent Reviews(1)</span>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-bordered view-profile">View Profile</button>
-                    </div>
+                                            <div class="mb-5 flex-wrap d-flex">
+                                                <button class="homenet-btn button-bordered view-profile">View Profile</button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1065,9 +1037,9 @@
                                 <div class="tip">
                                     “Verify your HK Mobile to List a property for Free”
                                 </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-dash">Start Now</button>
-                    </div>
+                                <div class="mb-5 flex-wrap d-flex">
+                                    <button class="homenet-btn button-dash">Start Now</button>
+                                </div>
                             </div>
                             <div class="left_cell cell">
                                 <div class="header">
@@ -1079,9 +1051,9 @@
                                 <div class="item">
                                     Mobile
                                 </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-bordered verify">Add Verification</button>
-                    </div>
+                                <div class="mb-5 flex-wrap d-flex">
+                                    <button class="homenet-btn button-bordered verify">Add Verification</button>
+                                </div>
                             </div>
                             <div class="left_cell_photo cell">
                                 <div class="change">
@@ -1192,9 +1164,9 @@
                                         <div class="note_advice">
                                             Add a private note here for this property, this note will not be shown to the public.
                                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-bordered-rnd save-note">Save Note</button>
-                    </div>
+                                        <div class="mb-5 flex-wrap d-flex">
+                                            <button class="homenet-btn button-bordered-rnd save-note">Save Note</button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1391,9 +1363,9 @@
                         <div class="textarea">
                             <span class="placeholder">Type a Message...</span>
                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-msg-send">Send Message</button>
-                    </div> 
+                        <div class="mb-5 flex-wrap d-flex">
+                            <button class="homenet-btn button-msg-send">Send Message</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1435,18 +1407,14 @@
                             <span class="title">Delete this Chat?</span><br>
                             <span class="action">This action is permanent and cannot be undone.</span>
                         </div>
-<div class="mb-5 flex-wrap d-flex">
-                        <button class="homenet-btn button-popup confirm">Confirm</button>                        <button class="homenet-btn button-popup cancel">Cancel</button>
-                    </div>
+                        <div class="mb-5 flex-wrap d-flex">
+                            <button class="homenet-btn button-popup confirm">Confirm</button> <button class="homenet-btn button-popup cancel">Cancel</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-    
     <!-- Return to Top -->
     <a href="javascript:" id="return-to-top"><img src="assets/svg/caret-up-white.svg" alt="Return to top"></a>
     <!-- [4] Footer -->
