--- a/property-card-WIP.html
+++ b/property-card-WIP.html
@@ -9,6 +9,7 @@
     <title>Homenet Property Card - WIP</title>
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/homenet.css">
+    <link rel="stylesheet" href="assets/css/card.css">
     <!-- Font Awesome CSS -->
     <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <!-- Google Fonts -->
